--- a/stillalone/css/style.css
+++ b/stillalone/css/style.css
@@ -13,7 +13,7 @@ video {
     z-index: -100;
     -webkit-transform: translateX(-50%) translateY(-50%);
             transform: translateX(-50%) translateY(-50%);
- background: url('https://dl.dropboxusercontent.com/u/18499280/stillalone/still-alone-teaser.jpg') no-repeat;
+ background: url('https://github.com/thegoldenfilter/stillalone/blob/master/stillalone/still-alone-teaser.jpg') no-repeat;
   background-size: cover;
   -webkit-transition: 1s opacity;
   transition: 1s opacity;
