--- a/stillalone/css/style.css
+++ b/stillalone/css/style.css
@@ -13,7 +13,7 @@ video {
     z-index: -100;
     -webkit-transform: translateX(-50%) translateY(-50%);
             transform: translateX(-50%) translateY(-50%);
- background: url('https://github.com/thegoldenfilter/stillalone/blob/master/stillalone/still-alone-teaser.jpg') no-repeat;
+ background: url('https://raw.githubusercontent.com/thegoldenfilter/stillalone/master/stillalone/still-alone-teaser.jpg') no-repeat;
   background-size: cover;
   -webkit-transition: 1s opacity;
   transition: 1s opacity;
@@ -73,6 +73,6 @@ a:hover{
   div{width:70%;} 
 }
 @media screen and (max-device-width: 800px) {
-  html { background: url(https://github.com/thegoldenfilter/stillalone/blob/master/stillalone/still-alone-teaser.jpg) #000 no-repeat center center fixed; }
+  html { background: url(https://raw.githubusercontent.com/thegoldenfilter/stillalone/master/stillalone/still-alone-teaser.jpg) #000 no-repeat center center fixed; }
   #bgvid { display: none; }
 }
